--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_4?serverTimezone=America/New_York
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
